--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "lru-memoize": "^1.0.0",
     "map-props": "^1.0.0",
     "material-design-icons": "^2.2.3",
+    "material-ui-with-sass": "^0.1.17",
     "multireducer": "^2.0.0",
     "normalize.css": "^4.1.1",
     "piping": "^0.3.0",
